demo/deprecated/blue-green-single/02/02-green-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: marketing
spec:
  selector:
    app: green
  ports:
  - name: http
    port: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: green
  namespace: marketing
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green
  template:
    metadata:
      labels:
        app: green
    spec:
      containers:
      - image: hashicorp/http-echo:0.2.3
        imagePullPolicy: IfNotPresent
        name: www
        args:
          - -listen=:80
          - -text=!!!This is green!  (marketing.pixelproxy.io/blog)
