demo/deprecated/blue-green-single/02/04-www2.ingressroute.yaml
---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata: 
  name: blog2
  namespace: marketing
spec: 
  routes: 
  - conditions:
    - prefix: /blog
      services: 
        - name: green
          port: 80
